--- a/package.json
+++ b/package.json
@@ -4,14 +4,26 @@
   "description": "React starter kit",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "webpack-dev-server --hot --inline",
+    "build": "webpack",
+    "test": "mocha"
   },
   "author": "Chelsea Skovgaard",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.10",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
+    "css-loader": "^0.26.1",
     "mocha": "^3.2.0",
     "mocha-loader": "^1.0.0",
+    "node-sass": "^4.0.0",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   }
